# Vortex-Omega

./: .dockerignore  .env.testing.template  .gitignore  .gitinore  .gitlab-ci.yml  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  BACKUP_AND_DISASTER_RECOVERY.md  BUSINESS_ANALYSIS.md  CHANGELOG.md  CHANGELOG_SESSION.md  CI_CD_FIX_SUMMARY.md  CI_CD_REPAIR_COMPLETION_REPORT.md  CI_CD_RESILIENCE_GUIDE.md  CI_CD_TROUBLESHOOTING.md  COMPREHENSIVE_REVISION_HISTORY_2025.md  CONSTITUTIONAL_MONITORING_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT_ROADMAP.md  Dockerfile  ELITE_IMPLEMENTATION_PROTOCOL.md  FINAL_STAGE1_COMPLETION_REPORT.md  GITHUB_PUSH_INSTRUCTIONS.md  IMPLEMENTATION_COMPLETION_REPORT_FINAL.md  IMPLEMENTATION_COMPLETION_SUMMARY.md  IMPLEMENTATION_STATUS_REPORT.md  INTERNATIONALIZATION_REPORT.md  Jenkinsfile  KAMIL_IMPLEMENTATION_COMPLETION.md  LICENSE  MANIFEST.in  MODULE_AUDIT_REPORT.md  NOTICE.md  PM_AUDIT_REPORT.md  PROJECT_ANALYSIS_FINAL_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  (+46 more)
.github/: copilot-instructions.md
.github/workflows/: basic-validation.yml  build-test.yml  ci-enhanced-resilient.yml  ci-simple.yml  ci.yml  deploy-on-push.yml  docker-image.yml  docker-image.yml.disabled  docker-publish.yml  docker.yml  docs.yml  main.yml  pages.yml  production-cicd.yml  pypi.yaml  python-package.yml  security.yml
alembic/: env.py
config/: README.md  parameters.yml
dashboard/: README.md  Readmi.md  constitutional_monitor.html
data/: README.md
docs/: README.md  index.md  mkdocs.yml
docs/.github/: copilot-instructions.md
docs/api/: README.md
docs/testing/: README.md
monitoring/: README.md  alert_rules.yml  alerts.yml  prometheus.yml
nginx/: README.md  nginx.conf
notebooks/: 01_cgl_solver_demo.ipynb  README.md  nfcs_stage1_demo.ipynb
scripts/: README.md  ci_health_check.py  ci_validation.py  demo_basic_nfcs.py  deploy_production.sh  docker-deploy.sh  emergency_ci_fallback.sh  enhanced_ci_health_check.sh  enhanced_ci_health_check_v2.sh  offline_ci_validation.py  production_readiness_check.py  run-tests.sh  run_simulation.py  setup-hooks.sh  test_cicd_pipeline.sh  validate_cicd_pipeline.py
sql/: README.md  init.sql
sql/init/: 001_initial_schema.sql
src/: README.md  __init__.py  main.py  test_nfcs_integration.py
src/api/: README.md  __init__.py  launcher.py  server.py
src/config/: README.md  constitutional_config.py
src/core/: README.md  cgl_solver.py  cgl_solver_optimized.py  distributed_kuramoto.py  enhanced_kuramoto.py  enhanced_metrics.py  kuramoto_solver.py  kuramoto_solver_optimized.py  metrics.py  nfcs_core.py  regulator.py  state.py
src/evolution/: README.md  __init__.py  adaptive_coupling.py  genetic_optimizer.py  multi_objective.py  neuro_evolution.py  system_evolution.py
src/modules/: README.md  constitution_v0.py  constitutional_integration_manager.py  constitutional_realtime.py  early_warning_system.py  emergency_protocols.py  esc_kuramoto_integration.py  (+2 more)
test_venv/: pyvenv.cfg
tests/: README.md  test_basic_ci.py  test_constitutional_integration.py  test_enhanced_integration.py  test_symbolic_ai.py  test_symbolic_ai_kamil.py  test_symbolic_neural_bridge.py
документы/: README.md
(+98 files in other folders)
